# NoiEst

./: .gitignore  CMakeLists.txt  Decription.md  Doxyfile  README.md  build.bat
.obsidian/: workspace.json
src/: CMakeLists.txt  noi_est.cpp  test.cpp
src/lib/: CMakeLists.txt  noi_est.cpp
src/lib/include/: noi_est.hpp
